# RepoMind_AI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/app/application/services/: __init__.py  chat_service.py  github_service.py  (+6 more)
apps/api/app/config/: base.py  development.py  production.py  settings.py  testing.py
apps/api/app/core/: logging.py
apps/api/app/domain/: __init__.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/interfaces/: __init__.py
apps/api/app/middleware/: __init__.py  error.py  logging.py  request_id.py
apps/api/app/repositories/: __init__.py  base.py  chat_repository.py  indexing_repository.py  repository_repository.py  user_repository.py
apps/api/tests/: conftest.py  test_analysis_security_models.py  test_architecture_layers.py  test_authentication_pipeline.py  test_authorization_dependencies.py  test_authorization_policy.py  test_exception_handlers.py  test_github_client.py  test_github_debug_token_endpoint.py  test_github_repositories_endpoint.py  test_github_service.py  test_github_token_provider.py  test_health.py  test_identity_foundation.py  test_indexing_models.py  test_repository_models.py  test_repository_registration_endpoint.py  test_repository_registration_service.py  test_supabase_identity_foundation.py  test_supabase_jwks_verifier.py  test_user_models.py  test_user_sync_service.py
(+134 files in other folders)
