[project]
name = "repomind-api"
version = "0.1.0"
description = "RepoMind AI backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi[standard]>=0.115.6",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.3",
  "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
exclude = [
  ".ruff_cache",
  ".uv-cache",
  ".uv-python",
  ".uv-tool",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "S",
  "ASYNC",
]
ignore = [
  "S101"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
